--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">KotlinCraft</string>
     <string name="record_main">계산기로</string>
     <string name="main_record">기록확인</string>
+    <string name="value_zero">에러 : 분모가 0입니다.</string>
+    <string name="value_error">잘못된 수식 입니다.</string>
 </resources>
